# kasm

./: .gitignore  CMakeLists.txt  README.md  introduction.pptx
.github/workflows/: build.yml
data/: bf.k  d_source.kasm  more_data.kasm  program.ksym  source.k  source.kasm  source_asm.kasm  std.kasm
data/std/: io.k  memory.k  string.k  util.k  vector.k
presentations/: info.xlsx  introduction.pptx  template.pptx
src/: assembler.cpp  assembler.hpp  assembler.yy  assembler_util.cpp  ast.cpp  ast.hpp  binaryBuilder.cpp  binaryBuilder.hpp  common.hpp  common.hpp.in  compiler.cpp  compiler.hpp  compiler.tab.hpp  compiler.yy  compiler_util.cpp  compoundInputFileStream.cpp  compoundInputFileStream.hpp  debug.hpp  debugger.cpp  debugger.hpp  disassembler.cpp  disassembler.hpp  exception.hpp  kasm.cpp  lexer.cpp  lexer.hpp  memory.cpp  memory.hpp  memory.tpp  node.hpp  parser.cpp  parser.hpp  program.cpp  program.hpp  program.tpp  registers.cpp  registers.hpp  specification.cpp  specification.hpp  token.hpp  (+4 more)
test/: ktest.cpp
